--- a/app/views/legal_notes/_legal_notice.html.erb
+++ b/app/views/legal_notes/_legal_notice.html.erb
@@ -1,7 +1,7 @@
 <p>
   <em class="info"><%= l(:note_legal_notice) %></em> 
   <%= text_area_tag 'settings[legal_notice]', 
-    @settings[:legal_notice] || @plugin.settings[:defaults][:legal_notice], 
+    @settings.fetch(:legal_notice, @plugin.settings[:default][:legal_notice]), 
       class: 'wiki-edit', rows: 20 %>
 		 
 </p>
