**Add styling for all legal notes related presentations**
Styling supports Redmine themes (default, alternate, classic) and xmera
circle theme.

Implements #34

--- a/app/views/settings/_redmine_legal_notes_settings.html.erb
+++ b/app/views/settings/_redmine_legal_notes_settings.html.erb
@@ -1,2 +1,4 @@
 
-<%= render_tabs legal_notice_settings_tabs %>
+<%= tag.div class: 'legal-notes-settings' do %>
+  <%= render_tabs legal_notice_settings_tabs %>
+<% end %>
