Add LegalNote class
The LegalNote class provides a kind of interface or API.

The benefit is not quite clear because only the controller seems to
be more stable against future changes.

Probably it would have been better to leave the code unchanged.

Implements #36

--- a/app/views/legal_notes/_footer.html.erb
+++ b/app/views/legal_notes/_footer.html.erb
@@ -1,7 +1,7 @@
 <div id="footer">
     <div class="credits">Powered by <%= link_to Redmine::Info.app_name, Redmine::Info.url %> &copy; 2006-2020 Jean-Philippe Lang</div>
     <div class="legal-notes-link"> 
-      <%= link_to l(:label_legal_notice), legal_notes_path(legal_note: :legal_notice) %> |  
-      <%= link_to l(:label_data_privacy_policy), legal_notes_path(legal_note: :data_privacy_policy) %>
+      <%= link_to l(:label_legal_notice), legal_notes_path(name: :legal_notice) %> |  
+      <%= link_to l(:label_data_privacy_policy), legal_notes_path(name: :data_privacy_policy) %>
     </div>
 </div>
