**Fix request of settings page**
Bug is also covered with integration test.

Fixes #47

--- a/app/views/legal_notes/_legal_notice.html.erb
+++ b/app/views/legal_notes/_legal_notice.html.erb
@@ -1,7 +1,7 @@
 <p>
   <em class="info"><%= l(:note_legal_notice) %></em> 
   <%= text_area_tag 'settings[legal_notice]', 
-      LegalNote.find(name: :legal_notice), 
+      LegalNote.find(name: 'legal-notice'), 
       class: 'wiki-edit', rows: 20 %>	 
 </p>
 <%= wikitoolbar_for('settings_legal_notice') %>
