Prepare for version 0.1.3
* update README, CHANGELOG, and init.rb
* add all staged files due to server movement

--- a/app/views/legal_notes/_data_privacy_policy.html.erb
+++ b/app/views/legal_notes/_data_privacy_policy.html.erb
@@ -25,7 +25,7 @@
   <%=tag.p do %>
     <%= check_box_tag 'settings[enable_privacy_consent]',true,
         @settings['enable_privacy_consent'] %>
-    <%= tag.span 'Aktiviere die Einverständniserklärung' %>
+    <%= tag.span l(:label_enable_privacy_consent) %>
   <% end %>
   <%=tag.p do %>
   <%= text_field_tag 'settings[privacy_consent_text]', 
