Adds external legal notes links
Implements #636

--- a/app/views/legal_notes/_footer.html.erb
+++ b/app/views/legal_notes/_footer.html.erb
@@ -23,9 +23,6 @@
 <div id="footer">
     <div class="credits">Powered by <%= link_to Redmine::Info.app_name, Redmine::Info.url %> &copy; 2006-2022 Jean-Philippe Lang</div>
     <div class="legal-notes-link"> 
-      <%= link_to l(:label_legal_notice), legal_notes_path(name: 'legal-notice') if LegalNote.find(name: 'legal-notice').present? %>
-      <% if LegalNote.find(name: 'data-privacy-policy').present? %>
-       | <%= link_to l(:label_data_privacy_policy), legal_notes_path(name: 'data-privacy-policy') %>
-      <% end %>
+      <%= show(LegalNote.new).link_to_legal_notes %>
     </div>
 </div>
