--- a/app/views/legal_notes/_data_privacy_policy.html.erb
+++ b/app/views/legal_notes/_data_privacy_policy.html.erb
@@ -32,7 +32,7 @@
       @settings['privacy_consent_text'], 
       class: 'wiki-edit', size: 100 %>
       <%=tag.em class: 'info' do %>
-        <%= l(:note_user_privacy_consent) %>
+        <%= LegalNote.user_privacy_consent_note %>
       <% end %> 
   <% end %>
   <%= wikitoolbar_for('settings_privacy_consent_text') %>
@@ -48,5 +48,16 @@
         LegalNote.find(name: 'data-privacy-policy'), 
         class: 'wiki-edit', rows: 20 %>	 
   <% end %>
-<%= wikitoolbar_for('settings_data_privacy_policy') %>
+  <%= wikitoolbar_for('settings_data_privacy_policy') %>
+<% end %>
+
+<%=tag.fieldset do %>
+  <%=tag.legend l(:label_data_privacy_policy_link_text) %>
+  <%=tag.p do %>
+    <%= text_field_tag 'settings[data_privacy_policy_link]', 
+      @settings['data_privacy_policy_link'], size: 100 %>
+    <%=tag.em class: 'info' do %>
+      <%= l(:note_data_privacy_policy_link) %>
+    <% end %> 
+  <% end %>
 <% end %>
